added TableContacts coponent

--- a/src/components/structures/contactBook/ContactBook.css
+++ b/src/components/structures/contactBook/ContactBook.css
@@ -79,6 +79,13 @@ h6 {
 }
 /*sumra contact book styles*/
 
+@font-face {
+    font-family: "DM Sans";
+    src: url("../../../../res/fonts/DMSans-Medium.ttf");
+    src: url("../../../../res/fonts/DMSans-Regular.ttf");
+    src: url("../../../../res/fonts/DMSans-Bold.ttf");
+}
+
 .sumra-contact-book-main {
     z-index: 1;
     position: absolute;
