added reffered page

--- a/src/components/structures/contactBook/ContactBook.css
+++ b/src/components/structures/contactBook/ContactBook.css
@@ -94,22 +94,7 @@ h6 {
     width: 100%;
     height: 100%;
 }
-.sumra-contact-book-left-panel {
-    background-color: blueviolet;
-    position: absolute;
-    left: 0px;
-    top: 0px;
-    width: 20%;
-    height: 100%;
-}
-.sumra-contact-book-main-panel {
-    background-color: coral;
-    position: absolute;
-    right: 0px;
-    top: 0px;
-    width: 80%;
-    height: 100%;
-}
+
 .sumra-contact-book-link {
     position: relative;
     padding: 25px;
@@ -121,4 +106,531 @@ h6 {
     font-size: 1.3rem;
     color: rgba(0, 0, 0, 0.5);
     font-weight: 600;
+}
+/* Styles for AllContacts */
+@font-face {
+    font-family: "DM Sans";
+    src: url("../../../../res/fonts/DMSans-Medium.ttf");
+    src: url("../../../../res/fonts/DMSans-Regular.ttf");
+    src: url("../../../../res/fonts/DMSans-Bold.ttf");
+}
+
+.contact-book {
+    min-width: 320px;
+}
+.contact-book__main-content {
+    position: absolute;
+    font-family: "DM Sans";
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 22px;
+    color: #2e3140;
+    height: 100%;
+    width: calc(100% - 240px);
+    right: 0px;
+    top: 0px;
+    z-index: 2;
+    background-color: #fafafc;
+    padding: 30px;
+}
+.contact-book__header-contacts {
+    display: flex;
+    justify-content: space-between;
+    height: 31px;
+}
+.contact-book__title-inner {
+    display: flex;
+    gap: 2px;
+}
+@media (max-width: 1024px) {
+    .contact-book__title-inner {
+        padding-left: 50px;
+    }
+}
+.contact-book__title-all-contacts {
+    display: flex;
+    align-items: center;
+    margin: 0;
+}
+@media (max-width: 382px) {
+    .contact-book__title-all-contacts {
+        font-size: 18px;
+    }
+}
+.contact-book__number-of-contacts {
+    height: 17px;
+    padding: 3px 6px;
+    background: #959bad;
+    border-radius: 30px;
+    font-family: "DM Sans ";
+    font-style: normal;
+    font-weight: bold;
+    font-size: 11px;
+    line-height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+}
+.contact-book__inner-person {
+    position: relative;
+    display: flex;
+    align-items: center;
+    gap: 78px;
+    overflow: hidden;
+}
+@media (max-width: 526px) {
+    .contact-book__notification-img {
+        padding-right: 40px;
+    }
+}
+.contact-book__img-person {
+    position: absolute;
+    top: -12px;
+    left: 33px;
+}
+@media (max-width: 526px) {
+    .contact-book__img-person {
+        left: 10px;
+    }
+    .contact-book__main-content {
+        width: 100%;
+    }
+}
+.contact-book__name-person {
+    margin: 0;
+    font-family: "DM Sans";
+    font-style: normal;
+    font-weight: normal;
+    font-size: 15px;
+    line-height: 22px;
+    color: #2e3140;
+}
+@media (max-width: 526px) {
+    .contact-book__name-person {
+        display: none;
+    }
+}
+.contact-book__form-inner {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 25px;
+    gap: 60px;
+}
+@media (max-width: 1238px) {
+    .contact-book__form-inner {
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 30px;
+    }
+}
+.contact-book__input-inner {
+    display: flex;
+    gap: 20px;
+    width: 100%;
+}
+@media (max-width: 660px) {
+    .contact-book__input-inner {
+        flex-wrap: wrap;
+    }
+    .contact-book__main-content {
+        width: 100%;
+    }
+}
+.contact-book__for-select {
+    display: flex;
+    gap: 20px;
+    width: 100%;
+}
+@media (max-width: 432px) {
+    .contact-book__for-select {
+        flex-wrap: wrap;
+    }
+    .contact-book__main-content {
+        width: 100%;
+    }
+}
+.contact-book__sort-alphabet {
+    display: block;
+    width: 50%;
+    height: 36px;
+    min-width: 150px;
+    background: #fff;
+    box-shadow: 0px 5px 20px rgba(88, 86, 104, 0.12),
+        0px 30px 60px rgba(143, 140, 167, 0.08);
+    border-radius: 4px;
+    border: none;
+    padding-left: 10px;
+    outline: none;
+}
+@media (max-width: 660px) {
+    .contact-book__sort-alphabet {
+        width: 100%;
+    }
+    .contact-book__main-content {
+        width: 100%;
+    }
+}
+.contact-book__groups {
+    display: block;
+    width: 50%;
+    height: 36px;
+    min-width: 200px;
+    outline: none;
+    background: #fff;
+    box-shadow: 0px 5px 20px rgba(88, 86, 104, 0.12),
+        0px 30px 60px rgba(143, 140, 167, 0.08);
+    border-radius: 4px;
+    border: none;
+    padding-left: 10px;
+}
+@media (max-width: 660px) {
+    .contact-book__groups {
+        width: 100%;
+    }
+}
+.contact-book__find-blok {
+    position: relative;
+    width: 100%;
+}
+.contact-book__find-cash {
+    display: block;
+    width: 100%;
+    height: 36px;
+    padding-left: 12px;
+    min-width: 200px;
+    outline: none;
+    background: #fff;
+    box-shadow: 0px 5px 20px rgba(88, 86, 104, 0.12),
+        0px 30px 60px rgba(143, 140, 167, 0.08);
+    border-radius: 4px;
+    border: none;
+}
+.contact-book__img-search {
+    position: absolute;
+    top: 9px;
+    right: 15px;
+}
+.contact-book__btn-inner {
+    display: flex;
+    justify-content: flex-end;
+    gap: 20px;
+}
+@media (max-width: 1238px) {
+    .contact-book__btn-inner {
+        justify-content: center;
+    }
+}
+@media (max-width: 361px) {
+    .contact-book__btn-inner {
+        gap: 10px;
+    }
+}
+.contact-book__btn {
+    width: 154px;
+    height: 36px;
+    background: #fafafc;
+    box-shadow: 0px 5px 20px rgba(88, 86, 104, 0.12),
+        0px 30px 60px rgba(143, 140, 167, 0.08);
+    border-radius: 4px;
+    border: 1px solid #dbd8f8;
+    min-width: 142px;
+    font-family: "DM Sans";
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    color: #7165e3;
+    transition: all 0.4s;
+}
+.contact-book__btn:hover {
+    box-shadow: 0 0 10px 0 #7165e3 inset, 0 0 10px 4px #7165e3;
+    transform: scale(1.1);
+}
+@media (max-width: 398px) {
+    .contact-book__btn {
+        width: 100%;
+        font-size: 12px;
+    }
+}
+/* Styles for TableContacts */
+@font-face {
+    font-family: "DM Sans";
+    src: url("../../../../res/fonts/DMSans-Medium.ttf");
+    src: url("../../../../res/fonts/DMSans-Regular.ttf");
+    src: url("../../../../res/fonts/DMSans-Bold.ttf");
+}
+
+.contact-book__table-block {
+    box-shadow: inset 0px -1px 0px rgba(137, 138, 141, 0.15);
+    border-radius: 3px;
+}
+.contact-book__scroll {
+    position: relative;
+}
+
+.contact-book__table-wrapper {
+    position: relative;
+    margin-top: 20px;
+    min-width: 950px;
+    white-space: nowrap;
+    width: 100%;
+}
+
+.contact-book__list-alph {
+    display: flex;
+    position: absolute;
+    z-index: 10000;
+    list-style-type: none;
+    right: 0;
+    top: 49px;
+    width: 34px;
+    background: linear-gradient(
+            0deg,
+            rgba(240, 240, 245, 0.75),
+            rgba(240, 240, 245, 0.75)
+        ),
+        #fff;
+    box-shadow: 0px 5px 15px rgba(88, 86, 104, 0.12);
+    flex-direction: column;
+    text-align: center;
+}
+.contact-book__item-alph {
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
+    padding-bottom: 4px;
+    font-family: "DM Sans";
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 14px;
+    text-align: left;
+    cursor: pointer;
+    color: #4c4e5a;
+    transition: transform 0.4s;
+}
+.contact-book__item-alph:hover {
+    transform: scale(1.2);
+}
+.contact-book__item-alph-true {
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
+    padding-bottom: 4px;
+    font-family: "DM Sans";
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 14px;
+    text-align: left;
+    cursor: pointer;
+    color: #7165e3;
+    transition: transform 0.4s;
+}
+.contact-book__item-alph-true:hover {
+    transform: scale(1.2);
+}
+.contact-book__head-table {
+    font-family: "DM Sans" !important;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 100%;
+    color: #2e3140;
+    background-color: #f1f3f6;
+}
+.contact-book__th {
+    text-align: start !important;
+    padding: 15px 15px 10px !important;
+    font-family: "DM Sans" !important;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 15px;
+    line-height: 22px;
+    color: #2e3140;
+    cursor: default;
+}
+.contact-book__th-email {
+    background: url(../../../../res/images/contactBook/Sort.svg);
+    background-repeat: no-repeat;
+    background-position: 62px 20px;
+    cursor: pointer;
+}
+.contact-book__th-phone {
+    background: url(../../../../res/images/contactBook/Sort.svg);
+    background-repeat: no-repeat;
+    background-position: 128px 20px;
+    cursor: pointer;
+}
+.contact-book__th-social {
+    background: url(../../../../res/images/contactBook/Sort.svg);
+    background-repeat: no-repeat;
+    background-position: 163px 20px;
+    cursor: pointer;
+}
+.contact-book__th-used-social {
+    background: url(../../../../res/images/contactBook/Sort.svg);
+    background-repeat: no-repeat;
+    background-position: 230px 20px;
+    cursor: pointer;
+}
+.contact-book__th-groups {
+    background: url(../../../../res/images/contactBook/Sort.svg);
+    background-repeat: no-repeat;
+    background-position: 74px 20px;
+    cursor: pointer;
+}
+.contact-book__tr-alphabet {
+    height: 40px;
+    background: #fafafc;
+    box-shadow: inset 0px -1px 0px rgba(137, 138, 141, 0.15);
+    border-radius: 4px 4px 0px 0px !important;
+}
+.contact-book__tr-alphabet td {
+    padding: 10px 15px 4px;
+    text-align: start !important;
+    font-family: "DM Sans" !important;
+    font-style: normal;
+    font-weight: 500;
+    cursor: default;
+    font-size: 14px;
+    color: #2e3140;
+    border-bottom: 2px solid #e9e9eb !important;
+}
+.contact-book__input-checkbox {
+    display: none;
+}
+
+.contact-book__td-checkbox {
+    position: relative;
+    margin: 0 20px 0 0;
+    width: 200px;
+    height: 200px;
+    border: 2px solid #ebecf0 !important;
+    box-sizing: border-box;
+    border-radius: 3px;
+    cursor: pointer;
+    vertical-align: middle;
+    background-color: brown;
+    color: chartreuse;
+}
+.contact-book__td-checkbox::before {
+    content: "";
+    position: absolute;
+    display: inline-block;
+    top: -3px;
+    left: 3px;
+}
+.contact-book__td-text {
+    font-family: "DM Sans" !important;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 15px;
+    line-height: 22px;
+    color: #2e3140;
+}
+.contact-book__email {
+    font-family: "DM Sans";
+    font-style: normal;
+    font-weight: normal !important;
+    font-size: 14px;
+    line-height: 100%;
+    color: #4c4e5a;
+}
+.contact-book__img-flag {
+    margin-right: 7px;
+}
+.contact-book__phon-number {
+    font-family: "DM Sans" !important;
+    font-style: normal;
+    font-weight: normal !important;
+    font-size: 14px;
+    line-height: 100%;
+    color: #4c4e5a;
+}
+.contact-book__group {
+    background: rgba(219, 216, 248, 0.35);
+    border-radius: 3px;
+    font-family: "DM Sans" !important;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 10px;
+    line-height: 100%;
+    color: #7165e3;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    margin-right: 36px;
+}
+.contact-book__tr-content {
+    height: 66px;
+}
+.contact-book__social-img {
+    display: inline-flex;
+    margin-right: 12px;
+}
+.contact-book__block-pagination {
+    display: flex;
+    margin-top: 33px;
+    align-items: center;
+    gap: 15px;
+    margin-left: 25px;
+}
+@media (max-width: 375px) {
+    .contact-book__block-pagination {
+        margin-left: 0;
+    }
+}
+.contact-book__inner-add-people {
+    display: flex;
+    gap: 10px;
+    align-items: center;
+    font-family: "DM Sans";
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 100%;
+    color: #7165e3;
+    cursor: pointer;
+}
+.contact-book__img-arrow {
+    width: 12px;
+}
+.contact-book__show-contacts {
+    margin: 0;
+    font-family: "DM Sans" !important;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 100%;
+    color: #7a7b85;
+}
+.contact-book__input-checkbox:checked + .contact-book__td-checkbox:before {
+    content: "\2713";
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #7165e3;
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    left: -2px;
+    top: -2px;
+    box-sizing: border-box;
+    border-radius: 3px;
+    color: white;
+}
+.contact-book__input-checkbox:disabled + .contact-book__td-checkbox:before {
+    background: #eee;
+    color: #aaa;
+}
+@media (max-width: 1262px) {
+    .contact-book__scroll {
+        overflow: scroll;
+    }
 }
