--- a/src/components/structures/contactBook/ContactBook.css
+++ b/src/components/structures/contactBook/ContactBook.css
@@ -85,7 +85,9 @@ h6 {
     src: url("../../../../res/fonts/DMSans-Regular.ttf");
     src: url("../../../../res/fonts/DMSans-Bold.ttf");
 }
-
+.display-none {
+    display: none;
+}
 .sumra-contact-book-main {
     z-index: 1;
     position: absolute;
@@ -510,15 +512,14 @@ h6 {
 .contact-book__td-checkbox {
     position: relative;
     margin: 0 20px 0 0;
-    width: 200px;
-    height: 200px;
+    width: 20px;
+    height: 20px;
     border: 2px solid #ebecf0 !important;
     box-sizing: border-box;
     border-radius: 3px;
     cursor: pointer;
     vertical-align: middle;
-    background-color: brown;
-    color: chartreuse;
+    display: inline-block;
 }
 .contact-book__td-checkbox::before {
     content: "";
@@ -633,4 +634,417 @@ h6 {
     .contact-book__scroll {
         overflow: scroll;
     }
+}
+/* Styles for imports */
+.import-contacts-modal {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 10001;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: rgba(52, 54, 74, 0.25);
+    backdrop-filter: blur(5px);
+    padding: 0 10px;
+}
+.import-contacts-modal__inner {
+    position: relative;
+    width: 440px;
+    height: 410px;
+    padding: 30px;
+    background: #fafafc;
+    box-shadow: inset 0px -1px 0px rgba(137, 138, 141, 0.15);
+    border-radius: 12px;
+}
+.import-contacts-modal__inner::after {
+    content: "";
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 2px;
+    background-color: #eff0f2;
+    bottom: 90px;
+    left: 0;
+}
+@media (max-width: 426px) {
+    .import-contacts-modal__inner {
+        width: 100%;
+        padding: 30px 10px;
+    }
+}
+.import-contacts-modal__block-header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.import-contacts-modal__title {
+    margin: 0;
+    font-family: DM Sans;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 17px;
+    line-height: 22px;
+    color: #2e3140;
+}
+.import-contacts-modal__img-close {
+    width: 13px;
+    height: 13px;
+    cursor: pointer;
+}
+.import-contacts-modal__subtitle {
+    margin: 30px 0 25px;
+    font-family: DM Sans;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 150%;
+    text-align: center;
+    color: #7a7b85;
+}
+@media (max-width: 377px) {
+    .import-contacts-modal__subtitle {
+        margin: 20px 0 10px;
+    }
+}
+.import-contacts-modal__inner-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 25px;
+}
+.import-contacts-modal__form-group-input {
+    display: flex;
+    justify-content: center;
+}
+.import-contacts-modal__input-file {
+    display: none;
+    outline: 0;
+}
+.import-contacts-modal__label {
+    width: 320px;
+    height: 98px;
+    margin: 0 auto;
+    line-height: 98px;
+    background: #fff;
+    border: 2px dashed rgba(113, 101, 227, 0.25);
+    box-sizing: border-box;
+    border-radius: 7px;
+    cursor: pointer;
+    text-align: center;
+}
+@media (max-width: 426px) {
+    .import-contacts-modal__label {
+        width: 270px;
+    }
+}
+.import-contacts-modal__icons {
+    display: block;
+    width: 100%;
+    font-size: 42px;
+    padding-bottom: 16px;
+    outline: none;
+}
+.import-contacts-modal__title-file {
+    margin-left: 7px;
+    color: grey;
+    font-family: DM Sans;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 15px;
+    line-height: 15px;
+    color: #7165e3;
+}
+.import-contacts-modal__title-file :focus {
+    outline: none;
+}
+.import-contacts-modal__select {
+    width: 320px;
+    height: 40px;
+    text-align: center;
+    background: #fff;
+    box-shadow: 0px 10px 30px rgba(88, 86, 104, 0.1),
+        0px 30px 60px rgba(143, 140, 167, 0.08);
+    border-radius: 4px;
+    border: none;
+    outline: none;
+}
+@media (max-width: 426px) {
+    .import-contacts-modal__select {
+        width: 270px;
+    }
+}
+.import-contacts-modal__block-button {
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    height: 82px;
+}
+.import-contacts-modal__button {
+    width: 133px;
+    height: 40px;
+    left: calc(50% - 133px / 2 - 76.5px);
+    top: calc(50% - 40px / 2);
+    background: #7165e3;
+    opacity: 0.5;
+    box-shadow: 0px 10px 20px rgba(97, 105, 255, 0.1),
+        0px 10px 20px rgba(97, 105, 255, 0.1);
+    border-radius: 4px;
+    flex: none;
+    order: 0;
+    flex-grow: 0;
+    margin: 0px 20px;
+    font-family: DM Sans;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 100%;
+    color: #fff;
+}
+.import-contacts-modal__button:hover {
+    background: #7165e3;
+    box-shadow: inset 0px 10px 20px rgba(97, 105, 255, 0.1),
+        0px 10px 20px rgba(97, 105, 255, 0.1);
+    border-radius: 4px;
+}
+@media (max-width: 426px) {
+    .import-contacts-modal__button {
+        width: 100px;
+    }
+}
+.import-contacts-modal__button-cancel {
+    width: 133px;
+    height: 40px;
+    background: #fff;
+    box-shadow: 0px 30px 50px rgba(21, 19, 44, 0.2),
+        0px 50px 100px rgba(21, 19, 44, 0.2);
+    border-radius: 5px;
+    margin: 0px 20px;
+    font-family: DM Sans;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 100%;
+    color: #4c4e5a;
+}
+@media (max-width: 426px) {
+    .import-contacts-modal__button-cancel {
+        width: 100px;
+    }
+}
+/* Imports Download styles*/
+.import-download-modal {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 10001;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: rgba(52, 54, 74, 0.25);
+    backdrop-filter: blur(5px);
+    padding: 0 10px;
+}
+.import-download-modal__inner {
+    position: relative;
+    width: 440px;
+    height: 410px;
+    padding: 30px;
+    background: #fafafc;
+    box-shadow: inset 0px -1px 0px rgba(137, 138, 141, 0.15);
+    border-radius: 12px;
+}
+.import-download-modal__inner-congrats {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    width: 440px;
+    height: 410px;
+    padding: 30px;
+    background: #fafafc;
+    box-shadow: inset 0px -1px 0px rgba(137, 138, 141, 0.15);
+    border-radius: 12px;
+}
+.import-download-modal__inner-congrats::after {
+    content: "";
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 2px;
+    background-color: #eff0f2;
+    bottom: 90px;
+    left: 0;
+}
+@media (max-width: 426px) {
+    .import-download-modal__inner-congrats {
+        width: 100%;
+        padding: 30px 10px;
+    }
+}
+.import-download-modal__block-header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 25px;
+}
+.import-download-modal__title {
+    margin: 0;
+    font-family: DM Sans;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 17px;
+    line-height: 22px;
+    color: #2e3140;
+}
+.import-download-modal__img-close {
+    width: 13px;
+    height: 13px;
+    cursor: pointer;
+}
+.import-download-modal__subtitle {
+    margin: 30px 0 25px;
+    font-family: DM Sans;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 17px;
+    line-height: 22px;
+    text-align: center;
+    color: #2e3140;
+}
+.import-download-modal__subtitle-count {
+    color: #7064e2;
+}
+.import-download-modal__loader {
+    display: flex;
+    align-items: center;
+    width: 110px;
+    height: 60%;
+    margin: 0 auto;
+}
+.import-download-modal__images {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 25px;
+}
+.import-download-modal__block-button {
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    height: 82px;
+    margin-top: 25px;
+}
+.import-download-modal__button {
+    width: 133px;
+    height: 40px;
+    left: calc(50% - 133px / 2 - 76.5px);
+    top: calc(50% - 40px / 2);
+    background: #7165e3;
+    box-shadow: 0px 10px 20px rgba(97, 105, 255, 0.1),
+        0px 10px 20px rgba(97, 105, 255, 0.1);
+    border-radius: 4px;
+    flex: none;
+    order: 0;
+    flex-grow: 0;
+    margin: 0px 20px;
+    font-family: DM Sans;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 100%;
+    color: #fff;
+}
+.import-download-modal__button:hover {
+    background: #7165e3;
+    box-shadow: inset 0px 10px 20px rgba(97, 105, 255, 0.1),
+        0px 10px 20px rgba(97, 105, 255, 0.1);
+    border-radius: 4px;
+}
+@media (max-width: 426px) {
+    .import-download-modal__button {
+        width: 110px;
+    }
+}
+.import-download-modal__button-cancel {
+    width: 133px;
+    height: 40px;
+    background: #fff;
+    box-shadow: 0px 30px 50px rgba(21, 19, 44, 0.2),
+        0px 50px 100px rgba(21, 19, 44, 0.2);
+    border-radius: 5px;
+    border: 2px solid #7165e3;
+    margin: 0px 20px;
+    font-family: DM Sans;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 100%;
+    color: #7165e3;
+}
+@media (max-width: 426px) {
+    .import-download-modal__button-cancel {
+        width: 110px;
+    }
+}
+/* Navigation sidebar styles */
+
+.contact-book__item {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    width: 100%;
+    height: 44px;
+    margin-bottom: 7px;
+    padding-left: 28px;
+    font-family: "DM Sans";
+    font-style: normal;
+    font-weight: bold;
+    font-size: 13px;
+    line-height: 100%;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    color: #fff !important;
+    transition: all 0.5s linear 0s;
+}
+.contact-book__item:hover {
+    background: #7165e3;
+    color: #fff;
+}
+.contact-book__item-active {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    width: 100%;
+    height: 44px;
+    margin-bottom: 7px;
+    padding-left: 28px;
+    font-family: "DM Sans";
+    font-style: normal;
+    font-weight: bold;
+    font-size: 13px;
+    line-height: 100%;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    color: #fff !important;
+    background: #7165e3;
+}
+.contact-book__unread {
+    position: relative;
+    top: -6px;
+    width: 26px;
+    height: 17px;
+    background: #7165e3;
+    border-radius: 30px;
+    font-family: "DM Sans";
+    font-style: normal;
+    font-weight: bold;
+    font-size: 11px;
+    line-height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #fff !important;
 }
