--- a/src/components/structures/contactBook/ContactBook.css
+++ b/src/components/structures/contactBook/ContactBook.css
@@ -93,8 +93,9 @@ h6 {
     position: absolute;
     top: 0px;
     left: 0px;
-    width: 100%;
-    height: 100%;
+    min-width: 100%;
+    min-height: 100%;
+    overflow: scroll;
 }
 
 .sumra-contact-book-link {
@@ -110,12 +111,6 @@ h6 {
     font-weight: 600;
 }
 /* Styles for AllContacts */
-@font-face {
-    font-family: "DM Sans";
-    src: url("../../../../res/fonts/DMSans-Medium.ttf");
-    src: url("../../../../res/fonts/DMSans-Regular.ttf");
-    src: url("../../../../res/fonts/DMSans-Bold.ttf");
-}
 
 .contact-book {
     min-width: 320px;
@@ -128,7 +123,7 @@ h6 {
     font-size: 18px;
     line-height: 22px;
     color: #2e3140;
-    height: 100%;
+    min-height: 100%;
     width: calc(100% - 240px);
     right: 0px;
     top: 0px;
