--- a/src/components/structures/contactBook/ContactBook.css
+++ b/src/components/structures/contactBook/ContactBook.css
@@ -1134,3 +1134,522 @@ h6 {
     justify-content: center;
     color: #fff !important;
 }
+/* Sending Message Modal Styles */
+.sending-message-modal {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 10001;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: rgba(52, 54, 74, 0.25);
+    backdrop-filter: blur(5px);
+    padding: 0 10px;
+}
+.sending-message-modal__inner {
+    position: relative;
+    width: 500px;
+    height: 430px;
+    padding: 30px;
+    background: #fafafc;
+    box-shadow: inset 0px -1px 0px rgba(137, 138, 141, 0.15);
+    border-radius: 12px;
+}
+.sending-message-modal__inner-congrats {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    width: 500px;
+    height: 430px;
+    padding: 30px;
+    background: #fafafc;
+    box-shadow: inset 0px -1px 0px rgba(137, 138, 141, 0.15);
+    border-radius: 12px;
+}
+.sending-message-modal__inner-congrats::after {
+    content: "";
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 2px;
+    background-color: #eff0f2;
+    bottom: 90px;
+    left: 0;
+}
+.sending-message-modal__block-header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.sending-message-modal__title {
+    margin: 0;
+    font-family: DM Sans;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 17px;
+    line-height: 22px;
+    color: #2e3140;
+}
+.sending-message-modal__img-close {
+    width: 13px;
+    height: 13px;
+    cursor: pointer;
+}
+.sending-message-modal__subtitle {
+    margin: 30px 0 25px;
+    font-family: DM Sans;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 17px;
+    line-height: 22px;
+    text-align: center;
+    color: #2e3140;
+}
+.sending-message-modal__subtitle-count {
+    color: #7064e2;
+}
+.sending-message-modal__loader {
+    display: flex;
+    align-items: center;
+    width: 110px;
+    height: 60%;
+    margin: 0 auto;
+}
+.sending-message-modal__images {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 25px;
+}
+.sending-message-modal__block-button {
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    height: 82px;
+}
+.sending-message-modal__button {
+    width: 133px;
+    height: 40px;
+    left: calc(50% - 133px / 2 - 76.5px);
+    top: calc(50% - 40px / 2);
+    background: #7165e3;
+    box-shadow: 0px 10px 20px rgba(97, 105, 255, 0.1),
+        0px 10px 20px rgba(97, 105, 255, 0.1);
+    border-radius: 4px;
+    flex: none;
+    order: 0;
+    flex-grow: 0;
+    margin: 0px 20px;
+    font-family: DM Sans;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 100%;
+    color: #fff;
+}
+.sending-message-modal__button:hover {
+    background: #7165e3;
+    box-shadow: inset 0px 10px 20px rgba(97, 105, 255, 0.1),
+        0px 10px 20px rgba(97, 105, 255, 0.1);
+    border-radius: 4px;
+}
+.sending-message-modal__button-cancel {
+    width: 133px;
+    height: 40px;
+    background: #fff;
+    box-shadow: 0px 30px 50px rgba(21, 19, 44, 0.2),
+        0px 50px 100px rgba(21, 19, 44, 0.2);
+    border-radius: 5px;
+    border: 2px solid #7165e3;
+    margin: 0px 20px;
+    font-family: DM Sans;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 100%;
+    color: #7165e3;
+}
+/* Send Modal Style*/
+.send-modal {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 10001;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: rgba(52, 54, 74, 0.25);
+    backdrop-filter: blur(5px);
+    padding: 0 10px;
+}
+.send-modal__inner {
+    position: relative;
+    width: 600px;
+    padding: 30px;
+    background: #fafafc;
+    box-shadow: inset 0px -1px 0px rgba(137, 138, 141, 0.15);
+    border-radius: 12px;
+}
+.send-modal__inner::after {
+    content: "";
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 2px;
+    background-color: #eff0f2;
+    bottom: 90px;
+    left: 0;
+}
+.send-modal__block-header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.send-modal__title {
+    margin: 0;
+    font-family: DM Sans;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 17px;
+    line-height: 22px;
+    color: #2e3140;
+}
+.send-modal__img-close {
+    width: 13px;
+    height: 13px;
+    cursor: pointer;
+}
+.send-modal__subtitle {
+    margin: 30px 0 25px;
+    font-family: DM Sans;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 150%;
+    text-align: center;
+    color: #7a7b85;
+}
+.send-modal__bolt-subtitle {
+    color: #2e3140;
+}
+.send-modal__block-icon {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 9px;
+    max-width: 400px;
+    margin: 0 auto;
+}
+.send-modal__input-checkbox {
+    display: none;
+}
+.send-modal__td-checkbox {
+    position: relative;
+    display: flex;
+    align-items: center;
+    width: 72px;
+    height: 72px;
+    box-sizing: border-box;
+    border-radius: 3px;
+    cursor: pointer;
+    margin: 0;
+}
+.send-modal__img-icon {
+    position: relative;
+    width: 48px;
+    height: 48px;
+    cursor: pointer;
+    margin: 0 auto;
+}
+.send-modal__img-mark {
+    display: none;
+}
+.send-modal__img-mark-visible {
+    position: absolute;
+    right: -10px;
+    top: -10px;
+    display: block;
+}
+.send-modal__input-checkbox:checked + .send-modal__td-checkbox:before {
+    content: "";
+    display: flex;
+    width: 72px;
+    height: 72px;
+    position: absolute;
+    box-sizing: border-box;
+    background: #e9e7fc;
+    border: 2px solid #7165e3;
+    border-radius: 7px;
+}
+.send-modal__input-checkbox:checked + .send-modal__td-checkbox::after {
+    content: "\2713";
+    display: flex;
+    justify-content: center;
+    width: 22px;
+    height: 22px;
+    line-height: 20px;
+    position: absolute;
+    top: -9px;
+    right: -8px;
+    background: #e9e7fc;
+    background: #7165e3;
+    border-radius: 50%;
+    border: 2px solid white;
+    color: white;
+    font-size: 18px;
+}
+.send-modal__input-checkbox:disabled + .send-modal__td-checkbox:before {
+    background: #eee;
+    color: #aaa;
+}
+/* Send Referral Modal Style */
+.send-referral-modal {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 10001;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: rgba(52, 54, 74, 0.25);
+    backdrop-filter: blur(5px);
+    padding: 0 10px;
+}
+.send-referral-modal__inner {
+    position: relative;
+    width: 600px;
+    padding: 30px;
+    background: #fafafc;
+    box-shadow: inset 0px -1px 0px rgba(137, 138, 141, 0.15);
+    border-radius: 12px;
+}
+.send-referral-modal__inner::after {
+    content: "";
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 2px;
+    background-color: #eff0f2;
+    bottom: 90px;
+    left: 0;
+}
+@media (max-width: 619px) {
+    .send-referral-modal__inner::after {
+        bottom: 53px;
+    }
+}
+@media (max-width: 619px) {
+    .send-referral-modal__inner {
+        width: 100%;
+        padding: 10px;
+    }
+}
+.send-referral-modal__block-header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.send-referral-modal__title {
+    margin: 0;
+    font-family: DM Sans;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 17px;
+    line-height: 22px;
+    color: #2e3140;
+}
+.send-referral-modal__img-close {
+    width: 13px;
+    height: 13px;
+    cursor: pointer;
+}
+.send-referral-modal__subtitle {
+    margin: 30px 0 25px;
+    font-family: DM Sans;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 150%;
+    text-align: center;
+    color: #7a7b85;
+}
+@media (max-width: 619px) {
+    .send-referral-modal__subtitle {
+        margin: 0;
+        font-size: 12px;
+    }
+}
+.send-referral-modal__bolt-subtitle {
+    color: #2e3140;
+}
+.send-referral-modal__block-btn {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+}
+@media (max-width: 619px) {
+    .send-referral-modal__block-btn {
+        gap: 5px;
+    }
+}
+.send-referral-modal__btn {
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 6px;
+    align-items: center;
+    width: 260px;
+    padding: 15px 20px 10px;
+    background: #fff;
+    border: 2px solid #f2f2f3;
+    box-sizing: border-box;
+    border-radius: 5px;
+}
+@media (max-width: 619px) {
+    .send-referral-modal__btn {
+        margin: 0 auto;
+        padding: 4px 10px 3px;
+        max-width: 220px;
+    }
+}
+.send-referral-modal__btn-active {
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 6px;
+    align-items: center;
+    width: 260px;
+    padding: 15px 20px 10px;
+    background: #f2f1fd;
+    border: 2px solid #7165e3;
+    box-sizing: border-box;
+    box-shadow: 0px 5px 15px rgba(21, 14, 82, 0.05);
+    border-radius: 5px;
+}
+@media (max-width: 619px) {
+    .send-referral-modal__btn-active {
+        margin: 0 auto;
+        padding: 15px 10px 10px;
+    }
+}
+.send-referral-modal__sumrachat {
+    height: 50px;
+    padding: 0 20px;
+}
+.send-referral-modal__img-sumrachat {
+    position: relative;
+}
+.send-referral-modal__img-check {
+    position: absolute;
+    right: -10px;
+    top: -10px;
+    display: none;
+}
+.send-referral-modal__img-check-active {
+    position: absolute;
+    right: -10px;
+    top: -10px;
+    display: block;
+}
+.send-referral-modal__text-grey {
+    color: #7a7b85;
+}
+.send-referral-modal__text-sumrameet {
+    position: relative;
+}
+.send-referral-modal__sumrameet {
+    height: 50px;
+    padding: 0 20px;
+}
+.send-referral-modal__img-sumrameet {
+    position: relative;
+    width: 20px;
+    height: 20px;
+}
+.send-referral-modal__phone {
+    display: flex;
+    flex-direction: column;
+}
+@media (max-width: 619px) {
+    .send-referral-modal__img {
+        width: 90%;
+    }
+}
+.send-referral-modal__block-button {
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    height: 82px;
+}
+@media (max-width: 619px) {
+    .send-referral-modal__block-button {
+        height: 52px;
+    }
+}
+.send-referral-modal__button {
+    width: 133px;
+    height: 40px;
+    left: calc(50% - 133px / 2 - 76.5px);
+    top: calc(50% - 40px / 2);
+    background: #7165e3;
+    opacity: 0.5;
+    box-shadow: 0px 10px 20px rgba(97, 105, 255, 0.1),
+        0px 10px 20px rgba(97, 105, 255, 0.1);
+    border-radius: 4px;
+    flex: none;
+    order: 0;
+    flex-grow: 0;
+    margin: 0px 20px;
+    font-family: DM Sans;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 100%;
+    color: #fff;
+}
+.send-referral-modal__button:hover {
+    background: #7165e3;
+    box-shadow: inset 0px 10px 20px rgba(97, 105, 255, 0.1),
+        0px 10px 20px rgba(97, 105, 255, 0.1);
+    border-radius: 4px;
+}
+@media (max-width: 619px) {
+    .send-referral-modal__button {
+        width: 110px;
+        height: 35px;
+    }
+}
+.send-referral-modal__button-cancel {
+    width: 133px;
+    height: 40px;
+    left: calc(50% - 133px / 2 + 76.5px);
+    top: calc(50% - 40px / 2);
+    background: #fff;
+    border: 2px solid #f2f2f3;
+    box-sizing: border-box;
+    border-radius: 4px;
+    flex: none;
+    order: 1;
+    flex-grow: 0;
+    margin: 0px 20px;
+    font-family: DM Sans;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 100%;
+    color: #4c4e5a;
+}
+@media (max-width: 619px) {
+    .send-referral-modal__button-cancel {
+        width: 110px;
+        height: 35px;
+    }
+}
